--- a/packages/ambient-components/src/styles.css
+++ b/packages/ambient-components/src/styles.css
@@ -39,7 +39,7 @@
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
 .ambx-label {
